<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/learnFragment"
        android:icon="@drawable/ic_baseline_learn_24"
        android:title="@string/learn" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/ic_baseline_explore_24"
        android:title="@string/explore" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

</menu>