<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="513dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.camera.view.PreviewView>

    <ImageView
        android:id="@+id/switchCamera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cameraswitch_24"
        android:contentDescription="@string/switch_camera_option_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_take_photo"
        android:layout_width="92dp"
        android:layout_height="93dp"
        android:layout_marginTop="56dp"
        android:clickable="true"
        android:contentDescription="@string/take_a_photo"
        android:focusable="true"
        android:scaleType="center"
        android:tint="@color/white"
        app:backgroundTint="@color/blue"
        app:fabCustomSize="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFinder"
        app:maxImageSize="50dp"
        app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_pose_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:contentDescription="@string/pose_button"
        android:focusable="true"
        android:tint="@color/white"
        app:backgroundTint="@color/blue_light"
        app:layout_constraintBottom_toBottomOf="@+id/fab_take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/fab_take_photo"
        app:layout_constraintTop_toTopOf="@+id/fab_take_photo"
        app:srcCompat="@drawable/ic_baseline_man_2_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_pose_predict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/pose_button"
        android:focusable="true"
        android:tint="@color/white"
        app:backgroundTint="@color/blue_light"
        app:layout_constraintBottom_toBottomOf="@+id/fab_take_photo"
        app:layout_constraintEnd_toStartOf="@+id/fab_take_photo"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fab_take_photo"
        app:srcCompat="@drawable/ic_baseline_predict_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pose_list"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFinder"
        app:layout_constraintVertical_bias="0.466"
        tools:listitem="@layout/item_pose"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_exit_button"
        android:layout_width="45dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFinder"
        app:srcCompat="@drawable/ic_baseline_cancel_24"
        tools:visibility="visible"
        android:contentDescription="@string/exit_pose_button" />


</androidx.constraintlayout.widget.ConstraintLayout>