<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.explore.ExploreFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_for_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:shadowColor="@color/black"
            android:text="@string/for_you_recommendation"
            android:textColor="@color/black_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.018" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommend_explore"
            android:layout_width="372dp"
            android:layout_height="189dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_for_you"
            app:layout_constraintHorizontal_bias="0.168"
            app:layout_constraintStart_toStartOf="@+id/tv_for_you"
            app:layout_constraintTop_toBottomOf="@+id/tv_for_you"
            tools:listitem="@layout/item_explore_image" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/explore"
            android:textColor="@color/black_light"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/rv_recommend_explore"
            app:layout_constraintTop_toBottomOf="@+id/rv_recommend_explore" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            android:contentDescription="@string/tabs_explore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:tabIconTint="@color/black_light"
            app:tabTextColor="@color/black_light" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tabs"
            tools:layout_editor_absoluteX="-32dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>